# lex

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  api.py  cli.py  const.py  contentextractor.py  db.py  dbtypes.py  fileparser.py  nltk.ipynb  pyproject.toml  requirements.txt  spacy.ipynb  test_db.py  test_dummy.py  test_vocab.py  textparser.py  utils.py  vocabmanager.py  wordextractor.py
apiserver/: Makefile  README.md  environment.yml  requirements-dev.txt  requirements.txt
apiserver/api/: _db.py  _utils.py  index.py  test_db.py
assets/reference-vocabulary/: vocabulary.base.txt  vocabulary.irrelevant.txt
backend/: README.md  Spacefile  api.py  cli.py  const.py  contentextractor.py  db.py  dbtypes.py  environment.yml  package-lock.json  package.json  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements.txt  test_db.py  textparser.py  utils.py  vercel.json  vocabmanager.py
backend-t/: api.py  cli.py  const.py  contentextractor.py  db.py  environment.yml  next.config.js  requirements.txt  textparser.py  vocabmanager.py
backend-t/api/: _const.py  cli.py  const.py  index.py  textparser.py  (+1 more)
backend/api/: _const.py  _db.py  _dbtypes.py  _utils.py  api.py  contentextractor.py  db.py  index.py
backend/app/: page.js
backend/assets/metadata/: deletion.csv  push.csv
backend/assets/reference-vocabulary/: vocabulary.base.txt  vocabulary.irrelevant.txt
backend/cli/: apirequestor.py  cli.py  contentextractor.py  textparser.py  vocabmanager.py
backend/db/: schema.sql
backend/tests/: test_db.py  test_vocab.py
db/: schema.sql
frontend/: next.config.js  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
(+30 files in other folders)
