[tool.ruff]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP", # pyupgrade
]
line-length = 79 # Same as Black.
target-version = "py39"
exclude = [
    "uncommitted",
]

[tool.black]
line-length = 79
preview = true
organize-imports = false

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 79
profile = "black"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version = "0.1.0"
update_changelog_on_bump = true
major_version_zero = true

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
exclude = [
    "uncommitted",
]

[tool.poetry]
name = "lex-backend"
version = "0.1.0"
description = ""
authors = ["Eric Janto <e.janto@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.99.1"
gunicorn = "^21.2.0"
mysql-connector-python = "^8.1.0"
python-dotenv = "^1.0.0"
rich = "^13.5.2"
tabulate = "0.9.0"
setuptools = "^68.1.2"
types-requests = "^2.31.0.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
wheel = "^0.41.2"
pydantic = "^1.10"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
bs4 = "^0.0.1"
commitizen = "^3.7.0"
EbookLib = "^0.18"
en-core-web-trf = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.6.1/en_core_web_trf-3.6.1-py3-none-any.whl"}
ipywidgets = "^8.1.0"
mypy = "^1.5.1"
pre-commit = "^3.3.3"
spacy = "3.6.0"
ruff = "^0.0.286"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
